# rustpodcasts

./: .env  Cargo.toml  README.md
config/: configuration.yaml  log.yaml
data_migrations/: data.sql
lib/: Cargo.toml
lib/src/: channels_last_episode.rs  lib.rs
lib/src/model/: mod.rs
lib/src/repository/: db_types.rs  from_db.rs  mod.rs  postgres.rs
migrations/: 20220220000652_create_channels_table.sql  20220311144154_create_episodes_table.sql  20230706200613_create_channels_table.sql  20230706200742_create_episodes_table.sql  20230706204509_add_some_data.sql
scripts/: init_db.sh
shuttle/: Cargo.toml  Shuttle.toml
shuttle/migrations/: 20230706200613_create_channels_table.sql  20230706200742_create_episodes_table.sql  20230706204509_add_some_data.sql  20230816012806_add_data.sql  20230820234238_more_changes.sql  20230823231724_add_episodes.sql  20230830222807_even_more_podcasts.sql  20230907222929_add_way_crab.sql  20230926225230_add_new_podcasts.sql  20231114173536_add_random_episodes.sql
shuttle/src/: common.rs  main.rs
shuttle/src/routes/: html.rs  json.rs  mod.rs
shuttle/statics/public/css/: common.css
shuttle/statics/templates/: about.html  base.html  channel.html  error.html  index.html
src/: common.rs  configuration.rs  lib.rs  main.rs  startup.rs
src/repositories/: channel_repo.rs  mod.rs
src/routes/: channel.rs  channels.rs  channels_last_episode.rs  last_episodes.rs  mod.rs
statics/public/css/: common.css
statics/templates/: about.html  base.html  channel.html  channels.html  index.html  index_full.html
tests/: channel.rs  channels.rs  common.rs  health_check.rs  last_episodes.rs
tests/config/: configuration.yaml
