[package]
name = "rustpodcasts"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.20"
shuttle-runtime = "0.20"
shuttle-shared-db = { version = "0.20", features = ["postgres", "sqlx"] }
shuttle-static-folder = "0.20"
tokio = "1.26.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "offline"] }
tera = "1"