[workspace]
members = [
    "lib",
    "shuttle"
]

[workspace.dependencies]
# internal
lib = { version = "0.1.0", path = "./lib" }

# actix and sqlx
actix-web = "4.3"
actix-files = "0.6"
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "chrono"] }
# serde
serde = { version = "1.0", features = ["derive"] }
# utils
tracing = "0.1"
uuid = { version = "1.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
