[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.26.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "postgres", "chrono", "macros"] }
async-trait = "0.1"