[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.32"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.1", default-features = false, features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "macros"] }
async-trait = "0.1"