[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# internal
lib = { workspace = true }

actix-web = { workspace = true }
actix-files = { workspace = true }

shuttle-actix-web = "0.32"
shuttle-runtime = "0.32"
tokio = "1"
shuttle-shared-db = { version = "0.32", features = ["postgres", "sqlx"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tera = "1"

sqlx = { version = "0.7", default-features = false, fea8tures = [ "runtime-tokio", "tls-native-tls", "macros", "postgres", "chrono", "migrate" ] }
